fix: update all internal links to clean URLs (remove .html extensions)

--- a/confirmation.html
+++ b/confirmation.html
@@ -51,10 +51,10 @@
         <!-- Desktop Navigation -->
         <nav class="nav" id="mainNav">
           <a href="index.html" class="nav-link">Home</a>
-          <a href="shop.html" class="nav-link">Shop</a>
-          <a href="shop.html?gender=Women" class="nav-link">Women</a>
-          <a href="shop.html?gender=Men" class="nav-link">Men</a>
-          <a href="shop.html?gender=Kids" class="nav-link">Kids</a>
+          <a href="/shop" class="nav-link">Shop</a>
+          <a href="/shop?gender=Women" class="nav-link">Women</a>
+          <a href="/shop?gender=Men" class="nav-link">Men</a>
+          <a href="/shop?gender=Kids" class="nav-link">Kids</a>
         </nav>
 
         <!-- Header Actions -->
@@ -120,7 +120,7 @@
           </button>
         </div>
         <div class="drawer-content">
-          <a href="dashboard.html" class="drawer-user">
+          <a href="/dashboard" class="drawer-user">
             <span class="drawer-user-avatar"
               ><i class="fa-solid fa-user"></i
             ></span>
@@ -139,27 +139,27 @@
                 ></span>
                 Home
               </a>
-              <a href="shop.html" class="drawer-nav-link">
+              <a href="/shop" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-store"></i
                 ></span>
                 Shop All
               </a>
-              <a href="shop.html?is_new=true" class="drawer-nav-link">
+              <a href="/shop?is_new=true" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-wand-magic-sparkles"></i
                 ></span>
                 New Arrivals
                 <span class="drawer-nav-badge">New</span>
               </a>
-              <a href="cart.html" class="drawer-nav-link">
+              <a href="/cart" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-bag-shopping"></i
                 ></span>
                 Cart
                 <span class="drawer-nav-badge" data-cart-count>0</span>
               </a>
-              <a href="wishlist.html" class="drawer-nav-link">
+              <a href="/wishlist" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-heart"></i
                 ></span>
@@ -170,37 +170,37 @@
           <div class="drawer-categories">
             <span class="drawer-nav-title">Categories</span>
             <div class="drawer-categories-grid">
-              <a href="shop.html?gender=Women" class="drawer-category">
+              <a href="/shop?gender=Women" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-venus"></i
                 ></span>
                 <span class="drawer-category-label">Women</span>
               </a>
-              <a href="shop.html?gender=Men" class="drawer-category">
+              <a href="/shop?gender=Men" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-mars"></i
                 ></span>
                 <span class="drawer-category-label">Men</span>
               </a>
-              <a href="shop.html?gender=Kids" class="drawer-category">
+              <a href="/shop?gender=Kids" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-child"></i
                 ></span>
                 <span class="drawer-category-label">Kids</span>
               </a>
-              <a href="shop.html?category=Lingerie" class="drawer-category">
+              <a href="/shop?category=Lingerie" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-gem"></i
                 ></span>
                 <span class="drawer-category-label">Lingerie</span>
               </a>
-              <a href="shop.html?category=Loungewear" class="drawer-category">
+              <a href="/shop?category=Loungewear" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-couch"></i
                 ></span>
                 <span class="drawer-category-label">Lounge</span>
               </a>
-              <a href="shop.html?category=Underwear" class="drawer-category">
+              <a href="/shop?category=Underwear" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-shirt"></i
                 ></span>
@@ -211,11 +211,11 @@
           <div class="drawer-support">
             <span class="drawer-nav-title">Support</span>
             <div class="drawer-support-links">
-              <a href="faq.html" class="drawer-support-link">FAQs</a>
-              <a href="size.html" class="drawer-support-link">Size Guide</a>
-              <a href="contact.html" class="drawer-support-link">Contact</a>
-              <a href="terms.html" class="drawer-support-link">Terms</a>
-              <a href="privacy.html" class="drawer-support-link">Privacy</a>
+              <a href="/faq" class="drawer-support-link">FAQs</a>
+              <a href="/size" class="drawer-support-link">Size Guide</a>
+              <a href="/contact" class="drawer-support-link">Contact</a>
+              <a href="/terms" class="drawer-support-link">Terms</a>
+              <a href="/privacy" class="drawer-support-link">Privacy</a>
             </div>
           </div>
         </div>
@@ -353,11 +353,11 @@
 
           <!-- Actions -->
           <div class="confirmation-actions">
-            <a href="shop.html" class="btn btn-primary">
+            <a href="/shop" class="btn btn-primary">
               <i class="fa-solid fa-bag-shopping"></i>
               Continue Shopping
             </a>
-            <a href="dashboard.html" class="btn btn-outline">
+            <a href="/dashboard" class="btn btn-outline">
               <i class="fa-solid fa-user"></i>
               View My Orders
             </a>
@@ -392,29 +392,29 @@
           <div>
             <h4 class="footer-title">Shop</h4>
             <nav class="footer-links">
-              <a href="shop.html">All Products</a>
-              <a href="shop.html?gender=Women">Women</a>
-              <a href="shop.html?gender=Men">Men</a>
-              <a href="shop.html?gender=Kids">Kids</a>
+              <a href="/shop">All Products</a>
+              <a href="/shop?gender=Women">Women</a>
+              <a href="/shop?gender=Men">Men</a>
+              <a href="/shop?gender=Kids">Kids</a>
             </nav>
           </div>
 
           <div>
             <h4 class="footer-title">Help</h4>
             <nav class="footer-links">
-              <a href="dashboard.html">My Account</a>
-              <a href="track.html">Track Order</a>
-              <a href="faq.html">FAQs</a>
-              <a href="size.html">Size Guide</a>
-              <a href="contact.html">Contact Us</a>
+              <a href="/dashboard">My Account</a>
+              <a href="/track">Track Order</a>
+              <a href="/faq">FAQs</a>
+              <a href="/size">Size Guide</a>
+              <a href="/contact">Contact Us</a>
             </nav>
           </div>
 
           <div>
             <h4 class="footer-title">Legal</h4>
             <nav class="footer-links">
-              <a href="terms.html">Terms of Service</a>
-              <a href="privacy.html">Privacy Policy</a>
+              <a href="/terms">Terms of Service</a>
+              <a href="/privacy">Privacy Policy</a>
             </nav>
           </div>
         </div>
@@ -453,7 +453,7 @@
             </div>
             <h3>Your cart is empty</h3>
             <p>Add items to your cart to checkout</p>
-            <a href="shop.html" class="btn btn-primary">Start Shopping</a>
+            <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
         <div class="cd-footer" id="cartDrawerFooter" style="display: none">
@@ -462,7 +462,7 @@
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
           </div>
           <p class="cd-note">Shipping calculated at checkout</p>
-          <a href="checkout.html" class="cd-checkout-btn">
+          <a href="/checkout" class="cd-checkout-btn">
             <i class="fa-solid fa-lock"></i> Proceed to Checkout
           </a>
           <button
@@ -654,8 +654,8 @@
 
         <p class="auth-legal">
           By continuing, you agree to our
-          <a href="terms.html">Terms</a> and
-          <a href="privacy.html">Privacy Policy</a>a
+          <a href="/terms">Terms</a> and
+          <a href="/privacy">Privacy Policy</a>a
           >
         </p>
       </div>
