--- a/faq.html
+++ b/faq.html
@@ -62,10 +62,10 @@
 
         <nav class="nav" id="mainNav">
           <a href="index.html" class="nav-link">Home</a>
-          <a href="shop.html" class="nav-link">Shop</a>
-          <a href="shop.html?gender=Women" class="nav-link">Women</a>
-          <a href="shop.html?gender=Men" class="nav-link">Men</a>
-          <a href="shop.html?gender=Kids" class="nav-link">Kids</a>
+          <a href="/shop" class="nav-link">Shop</a>
+          <a href="/shop?gender=Women" class="nav-link">Women</a>
+          <a href="/shop?gender=Men" class="nav-link">Men</a>
+          <a href="/shop?gender=Kids" class="nav-link">Kids</a>
         </nav>
 
         <div class="header-actions">
@@ -130,7 +130,7 @@
           </button>
         </div>
         <div class="drawer-content">
-          <a href="dashboard.html" class="drawer-user">
+          <a href="/dashboard" class="drawer-user">
             <span class="drawer-user-avatar"
               ><i class="fa-solid fa-user"></i
             ></span>
@@ -149,27 +149,27 @@
                 ></span>
                 Home
               </a>
-              <a href="shop.html" class="drawer-nav-link">
+              <a href="/shop" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-store"></i
                 ></span>
                 Shop All
               </a>
-              <a href="shop.html?is_new=true" class="drawer-nav-link">
+              <a href="/shop?is_new=true" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-wand-magic-sparkles"></i
                 ></span>
                 New Arrivals
                 <span class="drawer-nav-badge">New</span>
               </a>
-              <a href="cart.html" class="drawer-nav-link">
+              <a href="/cart" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-bag-shopping"></i
                 ></span>
                 Cart
                 <span class="drawer-nav-badge" data-cart-count>0</span>
               </a>
-              <a href="wishlist.html" class="drawer-nav-link">
+              <a href="/wishlist" class="drawer-nav-link">
                 <span class="drawer-nav-icon"
                   ><i class="fa-solid fa-heart"></i
                 ></span>
@@ -180,37 +180,37 @@
           <div class="drawer-categories">
             <span class="drawer-nav-title">Categories</span>
             <div class="drawer-categories-grid">
-              <a href="shop.html?gender=Women" class="drawer-category">
+              <a href="/shop?gender=Women" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-venus"></i
                 ></span>
                 <span class="drawer-category-label">Women</span>
               </a>
-              <a href="shop.html?gender=Men" class="drawer-category">
+              <a href="/shop?gender=Men" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-mars"></i
                 ></span>
                 <span class="drawer-category-label">Men</span>
               </a>
-              <a href="shop.html?gender=Kids" class="drawer-category">
+              <a href="/shop?gender=Kids" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-child"></i
                 ></span>
                 <span class="drawer-category-label">Kids</span>
               </a>
-              <a href="shop.html?category=Lingerie" class="drawer-category">
+              <a href="/shop?category=Lingerie" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-gem"></i
                 ></span>
                 <span class="drawer-category-label">Lingerie</span>
               </a>
-              <a href="shop.html?category=Loungewear" class="drawer-category">
+              <a href="/shop?category=Loungewear" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-couch"></i
                 ></span>
                 <span class="drawer-category-label">Lounge</span>
               </a>
-              <a href="shop.html?category=Underwear" class="drawer-category">
+              <a href="/shop?category=Underwear" class="drawer-category">
                 <span class="drawer-category-icon"
                   ><i class="fa-solid fa-shirt"></i
                 ></span>
@@ -221,11 +221,11 @@
           <div class="drawer-support">
             <span class="drawer-nav-title">Support</span>
             <div class="drawer-support-links">
-              <a href="faq.html" class="drawer-support-link">FAQs</a>
-              <a href="size.html" class="drawer-support-link">Size Guide</a>
-              <a href="contact.html" class="drawer-support-link">Contact</a>
-              <a href="terms.html" class="drawer-support-link">Terms</a>
-              <a href="privacy.html" class="drawer-support-link">Privacy</a>
+              <a href="/faq" class="drawer-support-link">FAQs</a>
+              <a href="/size" class="drawer-support-link">Size Guide</a>
+              <a href="/contact" class="drawer-support-link">Contact</a>
+              <a href="/terms" class="drawer-support-link">Terms</a>
+              <a href="/privacy" class="drawer-support-link">Privacy</a>
             </div>
           </div>
         </div>
@@ -338,7 +338,7 @@
                     <ul>
                       <li>
                         Logging into your
-                        <a href="dashboard.html">account dashboard</a>
+                        <a href="/dashboard">account dashboard</a>
                       </li>
                       <li>Clicking on the order in your order history</li>
                       <li>Using the tracking link sent to your email</li>
@@ -359,7 +359,7 @@
                       Orders can be modified or cancelled within 1 hour of
                       placing them. After this window, the order enters
                       processing and cannot be changed. Please
-                      <a href="contact.html">contact us</a> immediately if you
+                      <a href="/contact">contact us</a> immediately if you
                       need to make changes.
                     </p>
                   </div>
@@ -503,7 +503,7 @@
                     <p>To start a return:</p>
                     <ul>
                       <li>
-                        Log into your <a href="dashboard.html">account</a>
+                        Log into your <a href="/dashboard">account</a>
                       </li>
                       <li>Go to your order history</li>
                       <li>Select the item(s) you want to return</li>
@@ -511,7 +511,7 @@
                     </ul>
                     <p>
                       Alternatively,
-                      <a href="contact.html">contact our support team</a> for
+                      <a href="/contact">contact our support team</a> for
                       assistance.
                     </p>
                   </div>
@@ -530,7 +530,7 @@
                       Yes! We offer free exchanges for different sizes within 14
                       days. Simply return your original item and we'll ship the
                       new size at no extra cost. Check our
-                      <a href="size.html">Size Guide</a> to find your perfect
+                      <a href="/size">Size Guide</a> to find your perfect
                       fit.
                     </p>
                   </div>
@@ -586,7 +586,7 @@
                       Absolutely! We use industry-standard SSL encryption and
                       partner with PCI-compliant payment processors. Your
                       payment information is never stored on our servers. Read
-                      our <a href="privacy.html">Privacy Policy</a> for more
+                      our <a href="/privacy">Privacy Policy</a> for more
                       details.
                     </p>
                   </div>
@@ -632,7 +632,7 @@
                   <div class="faq-answer-content">
                     <p>
                       Visit our comprehensive
-                      <a href="size.html">Size Guide</a> for detailed
+                      <a href="/size">Size Guide</a> for detailed
                       measurement instructions and size charts. You'll find:
                     </p>
                     <ul>
@@ -656,7 +656,7 @@
                       If you're between sizes, we generally recommend sizing up
                       for comfort. For a more fitted look, size down. Each
                       product page includes specific fit advice. You can also
-                      <a href="contact.html">contact us</a> for personalized
+                      <a href="/contact">contact us</a> for personalized
                       sizing recommendations.
                     </p>
                   </div>
@@ -773,7 +773,7 @@
             here to help!
           </p>
           <div class="faq-cta-actions">
-            <a href="contact.html" class="btn btn-primary btn-lg">
+            <a href="/contact" class="btn btn-primary btn-lg">
               <i class="fa-solid fa-envelope"></i>
               Contact Us
             </a>
@@ -837,27 +837,27 @@
           <div>
             <h4 class="footer-title">Shop</h4>
             <nav class="footer-links">
-              <a href="shop.html">All Products</a>
-              <a href="shop.html?category=Lingerie">Lingerie</a>
-              <a href="shop.html?category=Loungewear">Loungewear</a>
-              <a href="shop.html?is_new=true">New Arrivals</a>
+              <a href="/shop">All Products</a>
+              <a href="/shop?category=Lingerie">Lingerie</a>
+              <a href="/shop?category=Loungewear">Loungewear</a>
+              <a href="/shop?is_new=true">New Arrivals</a>
             </nav>
           </div>
           <div>
             <h4 class="footer-title">Help</h4>
             <nav class="footer-links">
-              <a href="dashboard.html">My Account</a>
-              <a href="track.html">Track Order</a>
-              <a href="faq.html">FAQs</a>
-              <a href="size.html">Size Guide</a>
-              <a href="contact.html">Contact Us</a>
+              <a href="/dashboard">My Account</a>
+              <a href="/track">Track Order</a>
+              <a href="/faq">FAQs</a>
+              <a href="/size">Size Guide</a>
+              <a href="/contact">Contact Us</a>
             </nav>
           </div>
           <div>
             <h4 class="footer-title">Legal</h4>
             <nav class="footer-links">
-              <a href="terms.html">Terms of Service</a>
-              <a href="privacy.html">Privacy Policy</a>
+              <a href="/terms">Terms of Service</a>
+              <a href="/privacy">Privacy Policy</a>
             </nav>
           </div>
         </div>
@@ -921,7 +921,7 @@
             </div>
             <h3>Your cart is empty</h3>
             <p>Add items to your cart to checkout</p>
-            <a href="shop.html" class="btn btn-primary">Start Shopping</a>
+            <a href="/shop" class="btn btn-primary">Start Shopping</a>
           </div>
         </div>
         <div class="cd-footer" id="cartDrawerFooter" style="display: none">
@@ -930,7 +930,7 @@
             <span class="cd-subtotal-value" id="cartSubtotal">₦0</span>
           </div>
           <p class="cd-note">Shipping calculated at checkout</p>
-          <a href="checkout.html" class="cd-checkout-btn"
+          <a href="/checkout" class="cd-checkout-btn"
             ><i class="fa-solid fa-lock"></i> Proceed to Checkout</a
           >
           <button
@@ -1152,8 +1152,8 @@
 
         <p class="auth-legal">
           By continuing, you agree to our
-          <a href="terms.html">Terms</a> and
-          <a href="privacy.html">Privacy Policy</a>a
+          <a href="/terms">Terms</a> and
+          <a href="/privacy">Privacy Policy</a>a
           >
         </p>
       </div>
